@@ -19,6 +19,9 @@
     <p>Datum:</p>
     <c:widget id="date" type="demo_date"/>
 
+    <p>Widget-Filter:</p>
+    <c:widget id="filter" type="demo_filter"/>
+
     <p>Suche in den Heise News:</p>
     <c:widget id="search" type="demo_search"/>
 
